# Kyoto-GeoPython

./: .env  .gitignore  .prettierignore  CHANGELOG.md  Gemfile  Makefile  Python講習会（応用編） original.html  README.md  element-article.html  html_renderer.py  ipynb2html.ipynb  ipynb_html_converter.py  notebook-template.html  package.json  parse_html.py  pyproject.toml  requirements.txt  shortcuts.csv  shortcuts_windows.csv  template.html  test.html
.circleci/: config.yml
docs/: 404.html  CNAME  index-old.html  index.html  template.html  template_Links.html  template_library.html
docs/css/: base.css  nb-000.css  (+5 more)
resource/: shortcuts.csv  shortcuts.md  shortcuts_windows.csv  キーボードショートカット.ipynb
scripts/: build-all-ipynb.sh  build-ipynb.sh  constants.sh  filename_mapper.py  html_renderer.py  nb_converter.py
template/: notebook-template.html
スライド/: Slide_1.html  Slide_1.ipynb  Slide_1.slides.html
モジュール集/: モジュール集.md
ライブラリ集/: Sympy―代数演算.ipynb  parser.py  ライブラリ集.md
リンク集/: Links_hashimoto.md  Links_miyake.md  Links_umegaki.md
基礎編/: Matplotlib.ipynb  Numpyの基礎（１）導入.ipynb  Numpyの基礎（２）生成関数.ipynb  Numpyの基礎（４）データ型.ipynb  Numpyの基礎（５）要素の参照.ipynb  Numpyの基礎（６）ブロードキャスト.ipynb  Numpyの基礎（８）ファイル入出力.ipynb  Pythonの基礎.ipynb  Pythonの基礎1.ipynb  Pythonの基礎2.ipynb  c01.csv  ersst.v4.201702.nc  my_module.py  numpy（基礎編）.ipynb  ファイル読み込み.ipynb  文字列操作.ipynb
応用編/: Animation.ipynb  Fortran, C言語 との連携.ipynb  Pandas―データ分析（１）Series.ipynb  RK4.f90  RK4_f2py.f90  Seaborn ― matplotlib をより美しく、使いやすく.ipynb  SymPyー代数演算.ipynb  SymPyー代数演算（１）使い方.ipynb  SymPyー代数演算（２）応用：二重振り子.ipynb  shやBashの代わりにPythonを使う.ipynb
(+106 files in other folders)
