[tool.poetry]
name = "kyoto-geo-python"
version = "0.1.0"
description = ""
authors = ["zawakin <zawawahoge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^5.0.4"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
