[tool.poetry]
name = "kyoto-geo-python"
version = "0.1.0"
description = ""
authors = ["zawakin <zawawahoge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^5.0.4"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
scipy = "^1.9.0"
netCDF4 = "^1.6.0"
seaborn = "^0.11.2"
sympy = "^1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
